--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,15 @@
-<% @books.each do |book| %>
+<h1 class="current-category"><%= params[:category] %></h1>
 
-  <h2><%= link_to book.title, book_path(book) %></h2>
+
+<% if @books.count == 0 %>
+
+  <h1>There are no books currently in this category</h1>
+
+<% else %>
+
+    <% @books.each do |book| %>
+      <h2><%= link_to book.title, book_path(book) %></h2>
+    <% end %>
 
 <% end %>
 
-<%= link_to "Add Book", new_book_path %>
