--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,9 +7,19 @@
 
 <% else %>
 
+  <div class="row">
+
     <% @books.each do |book| %>
-      <h2><%= link_to book.title, book_path(book) %></h2>
+
+      <div class="col-md-3">
+        <a href="/books/<%= book.id %>">
+          <%= image_tag book.book_img.url(:book_index), class: "book" %>
+        </a>
+      </div>
+
     <% end %>
+
+  </div>
 
 <% end %>
 
