--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,12 +1,20 @@
-<h1>Edit Book</h1>
+<div class="col-md-6 col-md-offset-3">
 
-<%= simple_form_for @book, :html => { :multipart => true } do |f| %>
+  <div class="edit-book-form">
 
-  <%= f.select :category_id, @categories %>
-  <%= f.file_field :book_img %>
-  <%= f.input :title, label: "Book Title" %>
-  <%= f.input :description %>
-  <%= f.input :author %>
-  <%= f.button :submit %>
+      <h1>Edit Book</h1>
 
-<% end %>
+      <%= simple_form_for @book, :html => { :multipart => true } do |f| %>
+
+        <%= f.select :category_id, @categories %>
+        <%= f.file_field :book_img %>
+        <%= f.input :title, label: "Book Title" %>
+        <%= f.input :description %>
+        <%= f.input :author %>
+        <%= f.button :submit, :class => "btn-custom2" %>
+
+      <% end %>
+
+  </div>
+
+</div>
