--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,11 +1,9 @@
 <div class="col-md-6 col-md-offset-3">
+  <div class="new-review-form">
 
-  <div class="new-book-form">
-
-    <h1>New Book</h1>
+    <h1>New Review</h1>
 
     <%= render "form" %>
 
   </div>
-
 </div>
